--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,10 @@
-site_name: IUST Compiler (v0.1.3)
-site_url: https://m-zakeri.github.io
-repo_url: https://github.com/m-zakeri/IUSTCompiler
-site_description: Compiler (dragon) course materials and codes
+site_name: Compiler Design Course
+site_url: https://m-zakeri.github.io/Compilers
+repo_url: https://github.com/m-zakeri/Compilers
+site_description: Compiler design (Dragon) course materials and codes
 site_author: Morteza Zakeri
 copyright: © 2020-2024 Zakeri
+
 
 theme:
   name: material
@@ -20,18 +21,61 @@ theme:
       toggle:
         icon: material/toggle-switch
         name: Light mode
+
   icon:
     logo: material/library
+    repo: fontawesome/brands/github
+
   features:
-    - header.autohide
+    - navigation.instant
+    - navigation.instant.prefetch
+    - navigation.instant.progress
+    - navigation.instant.preview
+    - navigation.tracking
+
+    - navigation.tabs
+    # - navigation.tabs.sticky
+
+    # - navigation.sections
+    # - navigation.expand
+
+    - navigation.path
+    # - navigation.prune
+
+    # - navigation.indexes
+
+    # - toc.follow
+    - toc.integrate   # good feature :)
+
+    - navigation.top  # Add "back to top" button
+
+  # setup the search -----------------------------------------
+    - search.suggest # search suggest completion
+    - search.highlight # search highlight
+    - search.share # deep linking
+
+  # setup header ---------------------------------------------
+    - header.autohide # autohide header
+    # - announce.dismiss
+
+  # setup footer ---------------------------------------------
+    - navigation.footer # footer navigation
+
+  font:
+    text: Roboto # You can use any font from Google Fonts
+    code: Roboto Mono
+
   extra:
     social:
       - icon: fontawesome/brands/linkedin
         link: https://www.linkedin.com/in/mortazazakeri/
 
+
 plugins:
   - search
+  - tags
   - mkdocstrings:
+      default_handler: python
       handlers:
         python:
           setup_commands:
@@ -39,8 +83,11 @@ plugins:
             - import os
           selection:
             members: True
+
+
 extra_css:
   - stylex.css
+
 
 nav:
     - Home: index.md
@@ -86,3 +133,24 @@ nav:
         - MiniJava compiler development: projects/mini_java_compiler_development.md
 
     - Issue Tracker: 'https://github.com/m-zakeri/IUSTCompiler/issues'
+
+
+# for hiding the navigation and toc (used in top of .md file)
+# ---
+# hide:
+#   - navigation
+#   - toc
+# ---
+
+# # Page title
+# ...
+
+
+# for adding tags to the page (used in top of .md file)
+# ---
+# tags:
+#   - HTML5
+#   - JavaScript
+#   - CSS
+#   - Python
+# ---
