--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -119,9 +119,9 @@ nav:
         - Assignment statement 3: language_applications/assignment_statement3main.md
         - Assignment statement 4: language_applications/assignment_statement4main.md
     - Assignments:
-        - Index: semesters/index.md
-        - Writing assignments: semesters/writing_assignments.md
-        - Programming assignments: semesters/programming_assignment.md
+        - Index: assignments/index.md
+        - Writing assignments: assignments/writing_assignments.md
+        - Programming assignments: assignments/programming_assignment.md
     - Projects:
         - Index: projects/index.md
         - Symbol table: projects/core_symbol_table_development.md
