--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -174,6 +174,8 @@ nav:
         - Source code instrumentation: projects/core_source_code_instrumentation_development.md
         - MiniJava compiler development: projects/mini_java_compiler_development.md
     - Calendar: calendar/index.md
+    - Blog:
+        - blog/index.md
     - Issue Tracker: 'https://github.com/m-zakeri/Compilers/issues'
 
 
