--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,7 +73,7 @@ plugins:
       authors_profiles_name: Authors
 
   - search
-  - meta
+#  - meta
   - tags
   - mkdocstrings:
       default_handler: python
